Deploy/androiddm/androiddm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: androiddm
  name: androiddm
  namespace: androiddm
spec:
  selector:
    matchLabels:
      app: androiddm
  template:
    metadata:
      labels:
        app: androiddm
    spec:
      containers:
      - name:  gq-androiddm
        image:  docker.io/gangqiang01/m2mserver-ensaas:1.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 0.5     　　
            memory: 768M
            ephemeral-storage: 768M
          requests:
            cpu: 0.5
            memory: 768M
            ephemeral-storage: 768M
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: androiddm
  namespace: androiddm
  labels:
    app: androiddm
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: androiddm
