Deploy/androiddm/androiddm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: androiddm
spec:
  rules:
  - host: androiddm.androiddm.eks001.en.internal
    http:
      paths:
      - backend:
          serviceName: androiddm
          servicePort: 80
